--- a/shell/app/styles/_variable.scss
+++ b/shell/app/styles/_variable.scss
@@ -29,5 +29,6 @@ $subsider-fold-width: 48px;
 $sm-content-break-width: 600px;
 $md-content-break-width: 1024px;
 $lg-content-break-width: 1440px;
+$breadcrumb-height: 36px;
 
 $main-padding-break: 1272px;
