--- a/shell/app/common/components/base-list/index.scss
+++ b/shell/app/common/components/base-list/index.scss
@@ -3,22 +3,33 @@
     padding: 12px 16px;
     border-radius: 2px;
     background-color: $white;
-    box-shadow: 0 2px 4px 0 $color-box-shadow;
+    border-bottom: 1px solid $border-color;
     background-position: 100% 0;
     background-repeat: no-repeat;
+
+    .erda-base-list-item-hover-icons {
+      display: none;
+    }
+
+    &:hover {
+      background-color: $color-table-bg-hover;
+      .erda-base-list-item-hover-icons {
+        display: block;
+      }
+    }
 
     &:last-child {
       border-bottom: none;
     }
 
     .item-prefix-img {
-      margin-right: 12px;
+      margin-right: 8px;
       line-height: 1;
 
       img,
       > * {
-        width: 36px;
-        height: 36px;
+        width: 28px;
+        height: 28px;
       }
     }
 
