--- a/modules/market/src/styles/_resources.scss
+++ b/modules/market/src/styles/_resources.scss
@@ -1,6 +1,6 @@
 // color
-$color-primary: #6a549e !default;
-$primary: $color-primary;
+$color-primary: #302647 100% !default;
+$color-primary: $color-primary;
 
 // variable
 $sider-width: 48px;
