--- a/shell/app/common/components/edit-list/index.scss
+++ b/shell/app/common/components/edit-list/index.scss
@@ -16,7 +16,7 @@
     min-height: 38px;
     padding: 2px 10px;
     line-height: 34px;
-    border-bottom: 1px solid $border-color;
+    border-bottom: 1px solid $color-border;
 
     textarea.edit-list-item-textarea {
       height: 30px;
