--- a/shell/app/common/components/filter-group/index.scss
+++ b/shell/app/common/components/filter-group/index.scss
@@ -118,7 +118,7 @@
     .clear {
       display: inline-block;
       margin-left: 8px;
-      color: $primary;
+      color: $color-primary;
       cursor: pointer;
     }
   }
