--- a/shell/app/common/components/members-table/index.scss
+++ b/shell/app/common/components/members-table/index.scss
@@ -20,7 +20,7 @@
       height: 28px;
       margin-right: 8px;
       padding: 0 4px;
-      color: $text-sub;
+      color: $color-text-sub;
       font-size: 12px;
       line-height: 28px;
       background-color: $color-bg;
