--- a/shell/app/common/components/text-block-info/index.scss
+++ b/shell/app/common/components/text-block-info/index.scss
@@ -1,19 +1,19 @@
 .erda-text-block-info {
   &.small {
     .main-text {
-      color: $text-normal;
+      color: $color-text;
       font-size: 14px;
       font-weight: bold;
       line-height: 22px;
     }
     .sub-text {
-      color: $text-sub;
+      color: $color-text-sub;
       font-size: 12px;
       line-height: 16px;
     }
 
     .desc-text {
-      color: $text-desc;
+      color: $color-text-desc;
       font-size: 12px;
       line-height: 16px;
     }
@@ -21,19 +21,19 @@
 
   &.normal {
     .main-text {
-      color: $text-normal;
+      color: $color-text;
       font-size: 20px;
       font-weight: bold;
       line-height: 32px;
     }
     .sub-text {
-      color: $text-sub;
+      color: $color-text-sub;
       font-size: 12px;
       line-height: 16px;
     }
 
     .desc-text {
-      color: $text-desc;
+      color: $color-text-desc;
       font-size: 12px;
       line-height: 16px;
     }
