--- a/shell/app/common/components/tree-category/tree.scss
+++ b/shell/app/common/components/tree-category/tree.scss
@@ -65,7 +65,7 @@
   &:hover,
   &:focus {
     cursor: pointer;
-    color: $purple;
+    color: $color-default;
     background-color: $color-tree-bg-active;
   }
 }
