--- a/shell/app/config-page/components/gantt/components/task-list/task-list-table.scss
+++ b/shell/app/config-page/components/gantt/components/task-list/task-list-table.scss
@@ -1,7 +1,7 @@
 .erda-gantt-task-list-wrapper {
   display: table;
-  border-bottom: $border-color 1px solid;
-  border-left: $border-color 1px solid;
+  border-bottom: $color-border 1px solid;
+  border-left: $color-border 1px solid;
 }
 
 .erda-gantt-task-list-table-row {
