--- a/shell/app/config-page/components/table/table.scss
+++ b/shell/app/config-page/components/table/table.scss
@@ -16,7 +16,7 @@
     }
 
     .string-list-link {
-      color: $primary;
+      color: $color-primary;
       cursor: pointer;
     }
 
@@ -113,7 +113,7 @@
 
     &:hover {
       .arrow-icon {
-        color: $primary;
+        color: $color-primary;
       }
     }
   }
@@ -268,7 +268,7 @@
 
   &:hover {
     .arrow-icon {
-      color: $primary;
+      color: $color-primary;
     }
   }
 }
