--- a/shell/app/layout/pages/page-container/components/sidebar/index.scss
+++ b/shell/app/layout/pages/page-container/components/sidebar/index.scss
@@ -108,7 +108,7 @@
     //   font-weight: 500;
     // }
     .ant-menu-item-icon {
-      color: $primary;
+      color: $color-primary;
       font-size: 20px;
     }
 
