--- a/shell/app/modules/apiManagePlatform/pages/api-market/detail/components/test-modal.scss
+++ b/shell/app/modules/apiManagePlatform/pages/api-market/detail/components/test-modal.scss
@@ -14,7 +14,7 @@
   }
 
   .preview {
-    border: 1px solid $border-color;
+    border: 1px solid $color-border;
     border-radius: 3px;
 
     &-header {
