--- a/shell/app/modules/apiManagePlatform/pages/api-market/version/index.scss
+++ b/shell/app/modules/apiManagePlatform/pages/api-market/version/index.scss
@@ -23,7 +23,7 @@
       display: block;
       width: 0;
       height: 100%;
-      border-left: 1px solid $border-color;
+      border-left: 1px solid $color-border;
       position: absolute;
       top: 0;
       left: 300px;
