--- a/shell/app/modules/cmp/pages/account-guidance/index.scss
+++ b/shell/app/modules/cmp/pages/account-guidance/index.scss
@@ -33,10 +33,10 @@
       }
 
       &:not(.not-allowed):hover {
-        border-color: $primary;
+        border-color: $color-primary;
 
         .type-name {
-          color: $primary;
+          color: $color-primary;
         }
       }
 
