--- a/shell/app/modules/org/pages/setting/member-label.scss
+++ b/shell/app/modules/org/pages/setting/member-label.scss
@@ -7,7 +7,7 @@
     margin-right: 15px;
     margin-bottom: 20px;
     padding: 0 12px;
-    color: $text-sub;
+    color: $color-text-sub;
     font-size: 12px;
     line-height: 28px;
     background-color: $color-bg;
