--- a/shell/app/modules/project/common/components/issue/issue-config.scss
+++ b/shell/app/modules/project/common/components/issue/issue-config.scss
@@ -12,7 +12,7 @@
   }
 
   &.iteration {
-    background-color: $primary;
+    background-color: $color-primary;
     border-radius: $radius;
   }
 
