--- a/shell/app/modules/project/pages/settings/components/project-cluster.scss
+++ b/shell/app/modules/project/pages/settings/components/project-cluster.scss
@@ -27,7 +27,7 @@
     border-radius: 2px;
 
     > div {
-      color: $primary;
+      color: $color-primary;
       text-align: center;
 
       &:nth-child(1) {
