--- a/shell/app/modules/runtime/pages/overview/components/service-card.scss
+++ b/shell/app/modules/runtime/pages/overview/components/service-card.scss
@@ -117,7 +117,7 @@
 
         .domain-links {
           margin-right: 12px;
-          color: $primary;
+          color: $color-primary;
         }
 
         .iconfont {
