--- a/shell/app/yml-chart/nodes/add-row.scss
+++ b/shell/app/yml-chart/nodes/add-row.scss
@@ -11,8 +11,8 @@
     cursor: pointer;
 
     &:hover {
-      color: $primary;
-      border: 1px solid $primary;
+      color: $color-primary;
+      border: 1px solid $color-primary;
     }
   }
 }
