--- a/shell/app/common/components/base-list/index.scss
+++ b/shell/app/common/components/base-list/index.scss
@@ -3,7 +3,7 @@
     padding: 12px 16px;
     border-radius: 2px;
     background-color: $white;
-    border-bottom: 1px solid $border-color;
+    border-bottom: 1px solid $color-border;
     background-position: 100% 0;
     background-repeat: no-repeat;
 
