--- a/shell/app/common/components/icon/index.scss
+++ b/shell/app/common/components/icon/index.scss
@@ -9,7 +9,7 @@
   border-radius: 100%;
 
   &.iteration {
-    background-color: $primary;
+    background-color: $color-primary;
     border-radius: $radius;
   }
 
