--- a/shell/app/common/components/tags/index.scss
+++ b/shell/app/common/components/tags/index.scss
@@ -10,7 +10,7 @@
     display: block;
     background-color: $color-dark-1;
     border-radius: $radius;
-    color: $text-sub;
+    color: $color-text-sub;
     width: 28px;
     height: 28px;
     line-height: 28px;
