--- a/shell/app/config-page/components/card/card.scss
+++ b/shell/app/config-page/components/card/card.scss
@@ -17,7 +17,7 @@
   }
 
   .cp-card-item {
-    border: 1px solid $border-color;
+    border: 1px solid $color-border;
     &:hover {
       box-shadow: 0 2px 8px 0 rgba($color-default, 0.16);
     }
