--- a/shell/app/config-page/components/file-tree/file-tree.scss
+++ b/shell/app/config-page/components/file-tree/file-tree.scss
@@ -66,7 +66,7 @@
   &:hover,
   &:focus {
     cursor: pointer;
-    color: $purple;
+    color: $color-default;
     background-color: $color-tree-bg-active;
   }
 }
