--- a/shell/app/config-page/components/kanban/kanban.scss
+++ b/shell/app/config-page/components/kanban/kanban.scss
@@ -54,7 +54,7 @@
       background: transparent;
 
       &:hover {
-        border: 1px solid $primary;
+        border: 1px solid $color-primary;
       }
 
       &.update-disabled {
