--- a/shell/app/modules/apiManagePlatform/pages/access-manage/detail/index.scss
+++ b/shell/app/modules/apiManagePlatform/pages/access-manage/detail/index.scss
@@ -18,7 +18,7 @@
   }
 
   .record-list {
-    border: 1px solid $border-color;
+    border: 1px solid $color-border;
     border-radius: 6px;
 
     .no-data {
