--- a/shell/app/modules/apiManagePlatform/pages/api-market/detail/components/api-menu.scss
+++ b/shell/app/modules/apiManagePlatform/pages/api-market/detail/components/api-menu.scss
@@ -18,7 +18,7 @@
       display: flex;
       height: 48px;
       padding: 13px;
-      border-top: 1px solid $border-color;
+      border-top: 1px solid $color-border;
       cursor: pointer;
       &.active {
         background-color: $color-active-bg;
