--- a/shell/app/modules/application/common/app-selector.scss
+++ b/shell/app/modules/application/common/app-selector.scss
@@ -7,7 +7,7 @@
       border: 1px solid transparent;
 
       &:hover {
-        border: 1px solid $primary;
+        border: 1px solid $color-primary;
         box-shadow: unset;
       }
 
