--- a/shell/app/modules/application/pages/pipeline/run-detail/pipeline-log.scss
+++ b/shell/app/modules/application/pages/pipeline/run-detail/pipeline-log.scss
@@ -4,7 +4,7 @@
 
     .pipeline-log-title {
       padding: 10px;
-      border: 1px solid $border-color;
+      border: 1px solid $color-border;
       border-radius: $radius;
     }
   }
