--- a/shell/app/modules/cmp/pages/middleware-detail/index.scss
+++ b/shell/app/modules/cmp/pages/middleware-detail/index.scss
@@ -1,6 +1,6 @@
 .text-view {
   padding: 4px 11px;
-  border: 1px solid $border-color;
+  border: 1px solid $color-border;
   border-radius: 4px;
 
   p {
