--- a/shell/app/modules/org/pages/projects/create-project.scss
+++ b/shell/app/modules/org/pages/projects/create-project.scss
@@ -8,7 +8,7 @@
     border: 1px solid $color-border;
 
     &.checked {
-      border-color: $primary;
+      border-color: $color-primary;
     }
   }
 
