--- a/shell/app/modules/org/pages/projects/project-list.scss
+++ b/shell/app/modules/org/pages/projects/project-list.scss
@@ -63,7 +63,7 @@
     border-radius: 2px;
 
     > div {
-      color: $primary;
+      color: $color-primary;
       text-align: center;
 
       &:nth-child(1) {
