--- a/shell/app/modules/project/common/components/pipeline-manage/run-detail/snippet-detail.scss
+++ b/shell/app/modules/project/common/components/pipeline-manage/run-detail/snippet-detail.scss
@@ -14,19 +14,19 @@
       height: 100%;
       margin-right: 12px;
       overflow: auto;
-      border-right: 1px solid $border-color;
+      border-right: 1px solid $color-border;
 
       .snippet-item {
         width: 100%;
         height: 45px;
         padding: 0 12px;
         line-height: 45px;
-        border-bottom: 1px solid $border-color;
+        border-bottom: 1px solid $color-border;
         cursor: pointer;
 
         &.is-active,
         &:hover {
-          color: $primary;
+          color: $color-primary;
           background-color: $color-active-bg;
         }
 
