--- a/shell/app/modules/project/pages/issue/gantt/index.scss
+++ b/shell/app/modules/project/pages/issue/gantt/index.scss
@@ -6,7 +6,7 @@
         width: 100%;
         height: 1px;
         top: -1px;
-        background-color: $border-color;
+        background-color: $color-border;
         content: '';
       }
     }
@@ -16,7 +16,7 @@
     .erda-tree-indent-left {
       border-width: 0 0 1px 1px;
       border-style: solid;
-      border-color: $border-color;
+      border-color: $color-border;
       position: relative;
       &::after {
         position: absolute;
@@ -25,20 +25,20 @@
         height: 5px;
         bottom: -3px;
         right: -1px;
-        background-color: $border-color;
+        background-color: $color-border;
       }
       &.last-item {
         border-bottom-left-radius: 2px;
       }
     }
     .erda-tree-indent-full {
-      border-left: 1px solid $border-color;
+      border-left: 1px solid $color-border;
     }
     .erda-tree-indent-right {
-      background-color: $border-color;
+      background-color: $color-border;
     }
     .erda-tree-indent-left-bottom {
-      background-color: $border-color;
+      background-color: $color-border;
     }
   }
 }
@@ -51,8 +51,8 @@
 }
 
 .erda-task-list-header {
-  border-top: 1px solid $border-color;
-  border-bottom: 1px solid $border-color;
+  border-top: 1px solid $color-border;
+  border-bottom: 1px solid $color-border;
 
   &-selector {
     .ant-select-selector {
