--- a/shell/app/modules/project/pages/plan-detail/index.scss
+++ b/shell/app/modules/project/pages/plan-detail/index.scss
@@ -8,7 +8,7 @@
       .participant {
         .count {
           display: inline-block;
-          color: $primary;
+          color: $color-primary;
           line-height: 22px;
           text-align: center;
           background: rgba(93, 72, 223, 0.1);
