--- a/shell/app/user/common/perm-editor/perm-editor.scss
+++ b/shell/app/user/common/perm-editor/perm-editor.scss
@@ -38,12 +38,12 @@
         padding: 0 12px;
         font-weight: 500;
         background-color: $color-dark-1;
-        border-top: 1px solid $border-color;
-        border-bottom: 1px solid $border-color;
-        border-left: 1px solid $border-color;
+        border-top: 1px solid $color-border;
+        border-bottom: 1px solid $color-border;
+        border-left: 1px solid $color-border;
 
         &:last-child {
-          border-right: 1px solid $border-color;
+          border-right: 1px solid $color-border;
         }
 
         .head-text {
@@ -94,8 +94,8 @@
       min-width: 120px;
       max-width: 300px;
       padding: 0 12px;
-      border-top: 1px solid $border-color;
-      border-left: 1px solid $border-color;
+      border-top: 1px solid $color-border;
+      border-left: 1px solid $color-border;
 
       &.hover-active-item {
         background-color: $color-active-bg;
@@ -114,7 +114,7 @@
 
         &::after {
           content: ' ';
-          color: $primary;
+          color: $color-primary;
           font-size: 20px;
         }
 
@@ -142,7 +142,7 @@
       }
 
       &:last-child {
-        border-bottom: 1px solid $border-color;
+        border-bottom: 1px solid $color-border;
       }
 
       div {
@@ -152,7 +152,7 @@
 
     &:last-child {
       .perm-column-item {
-        border-right: 1px solid $border-color;
+        border-right: 1px solid $color-border;
       }
     }
   }
