--- a/shell/app/yml-chart/common/out-params-drawer.scss
+++ b/shell/app/yml-chart/common/out-params-drawer.scss
@@ -11,7 +11,7 @@
     padding: 8px 16px;
     text-align: left;
     background-color: $white;
-    border-top: 1px solid $border-color;
+    border-top: 1px solid $color-border;
   }
 
   .out-params-content {
