feat: update skeleton

--- a/shell/app/views/skeleton.html
+++ b/shell/app/views/skeleton.html
@@ -1,41 +1,45 @@
 <div class="skeleton-nav">
-  <div class="sidebar-group">
-    <div class="nav-item" style="margin-top: 12px">
-      <iconpark-icon name="appstore" color="white" size="20px" />
-    </div>
-    <div class="nav-item" style="margin-top: 27px">
-      <iconpark-icon name="erdalogo" size="19px" />
-    </div>
+  <div class="skeleton-sidebar">
+    <div class="blink skeleton-sidebar-item" style="height: 32px; width: 32px;"></div>
+    <div class="blink skeleton-sidebar-item"></div>
+    <div class="blink skeleton-sidebar-item"></div>
+    <div class="blink skeleton-sidebar-item"></div>
+    <div class="blink skeleton-sidebar-item"></div>
+    <div class="blink skeleton-sidebar-item"></div>
+    <div class="blink skeleton-sidebar-item"></div>
   </div>
-  <div class="sidebar-group" style="margin-bottom: 10px; color: #c3bbd8">
-    <div class="nav-item">
-      <iconpark-icon name="help" size="20px" style="margin-top: 2px" />
-    </div>
-    <div class="nav-item">
-      <iconpark-icon name="chinese" size="20px" style="margin-top: 2px" />
-    </div>
-    <div class="nav-item" style="margin-bottom: 18px">
-      <iconpark-icon name="bell" size="22px" />
-    </div>
-    <div class="nav-item" style="background: #666666; border-radius: 100%"></div>
+  <div style="margin-bottom: 10px;">
+    <div class="blink skeleton-sidebar-item"></div>
+    <div class="blink skeleton-sidebar-item"></div>
+    <div class="blink skeleton-sidebar-item"></div>
+    <div class="skeleton-sidebar-item blink" style="width: 28px; height: 28px;"></div>
   </div>
 </div>
-<div style="width: 200px; border-right: 1px solid #e6e6e6">
+<div style="position: absolute; left: 72px;">
+  <div class="skeleton-line blink" style="width: 150px;"></div>
+</div>
+<div style="width: 184px;">
   <div class="skeleton-sidebar-info">
-    <span class="skeleton-logo skeleton-bg"></span>
-    <div class="skeleton-line skeleton-bg" style="width: 80px; margin: 0 auto"></div>
+    <span class="skeleton-logo blink"></span>
+    <div class="skeleton-line blink" style="width: 90px; margin: 0 auto;"></div>
   </div>
-  <ul style="padding: 16px">
-    <li class="skeleton-line skeleton-icon-line skeleton-bg"></li>
-    <li class="skeleton-line skeleton-icon-line skeleton-bg"></li>
-    <li class="skeleton-line skeleton-icon-line skeleton-bg"></li>
+  <ul style="padding: 0 8px;">
+    <li class="skeleton-line skeleton-icon-line blink"></li>
+    <li class="skeleton-line skeleton-icon-line blink"></li>
+    <li class="skeleton-line skeleton-icon-line blink"></li>
+    <li class="skeleton-line skeleton-icon-line blink"></li>
+    <li class="skeleton-line skeleton-icon-line blink"></li>
+    <li class="skeleton-line skeleton-icon-line blink"></li>
   </ul>
 </div>
 <div class="skeleton-body">
-  <div class="skeleton-header">
-    <div class="skeleton-line skeleton-bg" style="width: 100px"></div>
-    <div class="skeleton-line skeleton-bg" style="width: 200px"></div>
-  </div>
+  <div class="skeleton-line blink" style="
+              width: 150px;
+              height: 28px;
+              position: absolute;
+              top: 36px;
+              left: 16px;
+            "></div>
   <div class="main-holder">
     <div id="enter-loading"></div>
   </div>
