--- a/shell/app/modules/project/common/components/project-selector.scss
+++ b/shell/app/modules/project/common/components/project-selector.scss
@@ -1,11 +1,10 @@
 .head-project-selector {
   .load-more-selector {
     .results {
-      padding: 4px 2px 4px 12px;
+      padding: 0;
       border: 1px solid transparent;
 
       &:hover {
-        border: 1px solid $primary;
         box-shadow: unset;
       }
 
@@ -21,8 +20,6 @@
 
   .head-project-name {
     display: flex;
-    align-items: center;
-    justify-items: center;
     width: 100%;
   }
 }
