--- a/shell/app/styles/_variable.scss
+++ b/shell/app/styles/_variable.scss
@@ -23,9 +23,9 @@ $b32: 32px;
 $b16: 16px;
 
 // 布局
-$sider-width: 48px;
-$subsider-width: 200px;
-$subsider-fold-width: 48px;
+$nav-width: 56px;
+$sidebar-width: 184px;
+$subsider-fold-width: 56px;
 $sm-content-break-width: 600px;
 $md-content-break-width: 1024px;
 $lg-content-break-width: 1440px;
