feat: update layout

--- a/shell/app/layout/pages/page-container/components/shell/index.scss
+++ b/shell/app/layout/pages/page-container/components/shell/index.scss
@@ -1,11 +1,14 @@
 .erda-shell {
   display: flex;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   overflow: hidden;
 
   .erda-main-content {
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    min-width: 600px;
     margin-top: 36px;
     margin-right: 16px;
   }
