fix: fix workbench style

--- a/shell/app/common/components/radio-tabs/index.scss
+++ b/shell/app/common/components/radio-tabs/index.scss
@@ -5,6 +5,7 @@
     border: unset;
     color: $color-default;
     background-color: $color-default-06;
+    box-shadow: unset !important;
     &.ant-radio-button-wrapper-checked {
       color: $white;
     }
