fix: fix menus open error

--- a/shell/app/layout/pages/page-container/components/sidebar/index.scss
+++ b/shell/app/layout/pages/page-container/components/sidebar/index.scss
@@ -112,6 +112,9 @@
     //   margin-left: 4px;
     // }
 
+    .ant-menu-submenu-title:active {
+      background-color: transparent;
+    }
     .ant-menu-item {
       display: flex;
       margin: 0;
