feat: hover highlight dropdown select icon color

--- a/shell/app/common/components/dropdown-select-new/index.scss
+++ b/shell/app/common/components/dropdown-select-new/index.scss
@@ -95,4 +95,14 @@
       color: $color-default;
     }
   }
+
+  .icon {
+    color: $color-text-holder;
+  }
+
+  &:hover {
+    .icon {
+      color: $color-default;
+    }
+  }
 }
